syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc LoginUser(LoginRequest) returns (UserResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string user_id = 1;
  string token = 2;
}
